--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.0",
+    "spinners-react": "^1.0.7",
     "swiper": "^9.4.1"
   },
   "devDependencies": {
